--- a/main/templates/edit_show.html
+++ b/main/templates/edit_show.html
@@ -7,8 +7,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Varela+Round" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
+<style>
+  .table{
+    width: 40%;
+  }
+  h1 { font-family: "Varela Round"; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; } h3 { font-family: "Varela Round"; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; } p { font-family: "Varela Round"; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: "Varela Round"; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: "Varela Round"; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
+  
+  .container{
+    margin-left: 20px;
+  
+  }
+  .errors{
+    color: red;
+    width: 32%;
+    border-radius: 5px;
+    margin-left: 14px;
+    padding: 14px;
+
+  }
+  </style>
   <body>
 
     <h3><a href="/shows">Go back</a></h3>
@@ -16,7 +37,7 @@
     <h1> Edit Show # {{ this_show.id }} </h1>
 
     {% if messages %}
-    <ul style="color:red" class="messages">    
+    <ul style="color:red" class="errors messages">    
         {% for message in messages %}    
             <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>    
         {% endfor %}
@@ -44,7 +65,8 @@
             <label for="descriptionLabel">Description</label>
             <textarea class="form-control" name="descriptionLabel" rows="3" value="{{ this_show.description }}">{{ this_show.description}}</textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Update</button>
+        <button type="submit" class="button is-primary">Update</button>
+
     </form> 
 
 
