--- a/main/templates/shows.html
+++ b/main/templates/shows.html
@@ -54,7 +54,9 @@
 
         </tbody>
       </table>
-      <a href="/shows/new">Add a New Show</a>
+      
+      <button class="button is-primary"><a href="/shows/new">Add a New Show</a></button>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
